# nut-shell

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  size-analysis.yml
docs/: ARCHITECTURE.md  CHAR_IO.md  DESIGN.md  DEVELOPMENT.md  EXAMPLES.md  IMPLEMENTATION.md  INTERNALS.md  IO_DESIGN.md  PHILOSOPHY.md  README.md  SECURITY.md  SPECIFICATION.md  TYPE_REFERENCE.md
examples/: basic.rs  credentials.toml.example
examples/native/: Cargo.toml  README.md
examples/native/src/: access_level.rs  credentials.rs  io.rs  lib.rs
examples/rp-pico/: Cargo.toml  README.md  build.rs  credentials.toml
examples/rp-pico-buildtime/: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  build.rs  credentials.toml
examples/rp-pico-buildtime/.cargo/: config.toml
examples/rp-pico-buildtime/src/: access_level.rs  lib.rs  system_commands.rs
examples/rp-pico/src/: access_level.rs  credentials.rs  hw_commands.rs  lib.rs  system_commands.rs
examples/stm32f072/: Cargo.toml  README.md  memory.x
examples/stm32f072/.cargo/: config.toml
examples/stm32f072/src/: access_level.rs  credentials.rs  hw_commands.rs  lib.rs  system_commands.rs
examples/stm32h753/: Cargo.toml  README.md  memory.x
examples/stm32h753-embassy/: Cargo.toml  README.md
examples/stm32h753-embassy/.cargo/: config.toml
examples/stm32h753-embassy/src/: access_level.rs  credentials.rs  hw_commands.rs  lib.rs
examples/stm32h753/src/: hw_commands.rs  lib.rs  system_commands.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: ci-local  cleanup.sh  format.sh
size-analysis/: .gitignore  README.md  analyze.sh
size-analysis/minimal/: Cargo.toml  memory.x
size-analysis/minimal/src/: main.rs
src/: config.rs  error.rs  io.rs  lib.rs  response.rs
src/auth/: mod.rs  password.rs
src/auth/providers/: buildtime.rs  const_provider.rs  mod.rs
src/shell/: decoder.rs  handler.rs  handlers.rs  history.rs  mod.rs  parser.rs
src/tree/: completion.rs  mod.rs  path.rs
tests/: helpers.rs  mod.rs  test_request_response.rs  test_response_formatting.rs  test_rust_optimizations.rs  test_shell_auth.rs  test_shell_core.rs  test_shell_editing.rs  test_shell_features.rs  test_shell_integration.rs  test_tree.rs  test_type_integration.rs  test_type_validation.rs
tests/fixtures/: mod.rs
