[workspace]
members = ["macros"]
exclude = ["examples/native", "examples/rp-pico", "examples/stm32f072"]
resolver = "2"

[package]
name = "nut-shell"
version = "0.1.0"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]
license = "MIT OR Apache-2.0"
description = "A lightweight command-line interface library for embedded systems"
repository = "https://github.com/HybridChild/nut-shell"
keywords = ["embedded", "no-std", "cli", "shell", "command-line"]
categories = ["embedded", "no-std", "command-line-interface"]

[dependencies]
heapless = { version = "0.9.2", default-features = false }
nut-shell-macros = { path = "macros", version = "=0.1.0" }

# Optional dependencies for specific features
sha2 = { version = "0.10", default-features = false, optional = true }
subtle = { version = "2.5", default-features = false, optional = true }

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
# For testing only (std available, not for embedded targets)
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = ["completion", "history"]

# Authentication feature - adds login/logout, password hashing, access control
authentication = ["dep:sha2", "dep:subtle"]

# Tab completion feature - enables command/path completion
completion = []

# Command history feature - enables up/down arrow navigation
history = []

# Async command support - enables async command execution
async = []

# For testing - enable std features in dependencies when running tests
std = []

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization, slower compile
strip = true          # Strip symbols

[profile.dev]
opt-level = 1         # Some optimization for faster dev builds
