[package]
name = "native_examples"
version = "0.1.0"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]

[dependencies]
# Nut-shell library (parent crate)
nut-shell = { path = "../..", default-features = false }

# Utilities
heapless = "0.9"

# Terminal control for raw mode (native examples only)
crossterm = "0.29"

# Async runtime (for async example)
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros"] }

[features]
default = ["authentication", "completion", "history"]

# Pass features through to nut-shell
authentication = ["nut-shell/authentication"]
completion = ["nut-shell/completion"]
history = ["nut-shell/history"]
async = ["nut-shell/async"]

[[bin]]
name = "basic"
path = "bin/basic/main.rs"

[[bin]]
name = "async_example"
path = "bin/async_example/main.rs"
required-features = ["async"]

[profile.release]
debug = true
lto = true
opt-level = "z"
