[package]
name = "rp-pico-buildtime"
version = "0.1.0"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]

[dependencies]
# Nut-shell library with authentication feature (required for build-time credentials)
nut-shell = { path = "../..", default-features = false, features = ["authentication"] }

# Cortex-M support
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Embedded HAL traits
embedded-hal = "1.0.0"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7" }

# RP2040-specific crates
rp2040-hal = { version = "0.11.0", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
rp-pico = "0.9.0"

# USB device support
usb-device = "0.3.2"
usbd-serial = "0.2.2"

# Utilities
panic-halt = "1.0.0"
fugit = "0.3"
heapless = "0.9"
nb = "1.1"
static_cell = "2.1"
portable-atomic = { version = "1.0", features = ["critical-section"] }

[build-dependencies]
# Required to run nut-shell-credgen at build time
nut-shell = { path = "../..", features = ["credgen"] }

[[bin]]
name = "buildtime"
path = "bin/main.rs"

[features]
default = []

# Optional features from nut-shell
completion = ["nut-shell/completion"]
history = ["nut-shell/history"]
async = ["nut-shell/async"]

[profile.release]
debug = true
lto = true
opt-level = "z"
