[package]
name = "rp-pico_examples"
version = "0.1.0"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]

[dependencies]
# Nut-shell library (parent crate)
# Default features for uart_cli (synchronous, authentication)
nut-shell = { path = "../..", default-features = false, features = ["authentication"] }

# Cortex-M support
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Embedded HAL traits
embedded-hal = "1.0.0"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7" }

# RP2040-specific crates (for uart_cli example)
rp2040-hal = { version = "0.11.0", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
rp-pico = "0.9.0"

# Embassy async runtime (for embassy_uart_cli example - optional dependencies)
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"], optional = true }
embassy-time = { version = "0.5.0", optional = true }
embassy-rp = { version = "0.8.0", features = ["time-driver", "critical-section-impl", "rp2040"], optional = true }
embassy-sync = { version = "0.7.2", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
static_cell = { version = "2.1.0", optional = true }
portable-atomic = { version = "1.0", features = ["critical-section"], optional = true }

# Utilities
panic-halt = "1.0.0"
fugit = "0.3"
heapless = "0.9"
nb = "1.1"

# Optional: RTT logging (comment out if not using probe-rs)
# rtt-target = "0.5"

[[bin]]
name = "uart_cli"
path = "bin/uart_cli/main.rs"

[[bin]]
name = "embassy_uart_cli"
path = "bin/embassy_uart_cli/main.rs"
required-features = ["embassy"]

[features]

default = ["authentication", "completion", "history"]

# Pass features through to nut-shell
authentication = ["nut-shell/authentication"]
completion = ["nut-shell/completion"]
history = ["nut-shell/history"]
async = ["nut-shell/async"]

# Embassy async support (enables async feature in nut-shell and all embassy dependencies)
embassy = [
    "async",  # Enable local async feature
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-rp",
    "dep:embassy-sync",
    "dep:embedded-io-async",
    "dep:static_cell",
    "dep:portable-atomic",
]

[profile.release]
debug = true
lto = true
opt-level = "z"
