[package]
name = "rp-pico_examples"
version = "0.1.0"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]

[dependencies]
# Nut-shell library (parent crate)
# Default features for examples (synchronous, no authentication by default)
nut-shell = { path = "../..", default-features = false }

# Cortex-M support
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Embedded HAL traits
embedded-hal = "1.0.0"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7" }

# RP2040-specific crates (for basic example)
rp2040-hal = { version = "0.11.0", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
rp-pico = "0.9.0"

# USB device support (for basic example)
usb-device = "0.3.2"
usbd-serial = "0.2.2"

# Embassy async runtime (for embassy example - optional dependencies)
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"], optional = true }
embassy-time = { version = "0.5.0", optional = true }
embassy-rp = { version = "0.8.0", features = ["time-driver", "critical-section-impl", "rp2040"], optional = true }
embassy-sync = { version = "0.7.2", optional = true }
embassy-usb = { version = "0.5.0", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }

# Utilities
panic-halt = "1.0.0"
fugit = "0.3"
heapless = "0.9"
nb = "1.1"
static_cell = "2.1"
portable-atomic = { version = "1.0", features = ["critical-section"] }

# Optional: RTT logging (comment out if not using probe-rs)
# rtt-target = "0.5"

[[bin]]
name = "basic"
path = "bin/basic/main.rs"

[[bin]]
name = "embassy"
path = "bin/embassy/main.rs"
required-features = ["embassy"]

[[bin]]
name = "buildtime"
path = "bin/buildtime/main.rs"
required-features = ["authentication"]

[build-dependencies]
# Required to run nut-shell-credgen at build time (only for buildtime example)
nut-shell = { path = "../..", features = ["credgen"] }

[features]

# Import features from nut-shell for pass through
authentication = ["nut-shell/authentication"]
completion = ["nut-shell/completion"]
history = ["nut-shell/history"]
async = ["nut-shell/async"]

default = ["completion", "history"]

# Embassy async support (enables async feature in nut-shell and all embassy dependencies)
embassy = [
    "async",  # Enable local async feature
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-rp",
    "dep:embassy-sync",
    "dep:embassy-usb",
    "dep:embedded-io-async",
]

[profile.release]
debug = true
lto = true
opt-level = "z"
