[package]
name = "stm32h753zi_embassy_examples"
version = "0.1.0"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]

[dependencies]
nut-shell = { path = "../..", default-features = false }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.6.0", default-features = false, features = ["stm32h753zi", "time-driver-any", "rt"] }
embassy-time = "0.5.1"
embassy-sync = "0.8.0"
embassy-usb = "0.6.0"
heapless = "0.9"
static_cell = "2.1"
panic-halt = "1.0"

[[bin]]
name = "basic"
path = "bin/basic/main.rs"

[features]
# Import features from nut-shell for pass-through
authentication = ["nut-shell/authentication"]
completion = ["nut-shell/completion"]
history = ["nut-shell/history"]
async = ["nut-shell/async"]

# H753ZI has 1 MB RAM — enable completion and history by default
default = ["completion", "history", "async"]

[profile.release]
debug = true
lto = true
opt-level = "z"

